--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,26 @@
 	<title>Service Wroker sample</title>
 </head>
 <body>
-	<center><h1>Service worker sample</h1></center>
+	<center>
+		<h1>Service worker sample</h1>
+		<p><small>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br/> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim <br/>ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br/> Duis aute irure dolor in reprehenderit<br/> in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint<br/> occaecat cupidatat non proident, sunt in culpa<br/> qui officia deserunt mollit anim id est laborum.</small></p>
+	</center>
 </body>
 </html>
 <script type="text/javascript">
-	if(typeof navigator.serviceWorker!='undefined'){
-		window.addEventListener('load',()=>{
-			navigator.serviceWorker.register('./sw.js').then((reg)=>{
-
-			}).catch(err=>{
-				console.log(err)
-			})
+if(typeof navigator.serviceWorker!='undefined'){
+	window.addEventListener('load',()=>{
+		navigator.serviceWorker.register('./sw.js').then((reg)=>{
+			navigator.serviceWorker.controller.postMessage('post from client')
+		}).catch(err=>{
+			console.log(err)
 		})
-	}
+
+		navigator.serviceWorker.addEventListener('message', event => {
+		  console.log(event.data);
+		});
+
+
+	})
+}
 </script>
